Kleinere Quellen bei Energy Charts

--- a/subdocs/01_intro.tex
+++ b/subdocs/01_intro.tex
@@ -112,7 +112,7 @@
     \centering
     \begin{tikzpicture}
         \node[anchor=center] at (0, 0) {\includegraphics[width=0.9\paperwidth]{images/Stromproduktion_Winter.jpg}};
-        \node[rotate=90,anchor=center] at (6, 0) {Quelle: Energy Charts};
+        \node[rotate=90,anchor=center] at (6, 0) {\tiny Quelle: Energy Charts};
     \end{tikzpicture}
 \end{frame}
 
@@ -120,7 +120,7 @@
     \centering
     \begin{tikzpicture}
         \node[anchor=center] at (0, 0) {\includegraphics[width=0.9\paperwidth]{images/Stromproduktion_Fruehling.jpg}};
-        \node[rotate=90,anchor=center] at (6, 0) {Quelle: Energy Charts};
+        \node[rotate=90,anchor=center] at (6, 0) {\tiny Quelle: Energy Charts};
     \end{tikzpicture}
 \end{frame}
 
@@ -128,6 +128,6 @@
     \centering
     \begin{tikzpicture}
         \node[anchor=center] at (0, 0) {\includegraphics[width=0.9\paperwidth]{images/Stromproduktion_Sommer.jpg}};
-        \node[rotate=90,anchor=center] at (6, 0) {Quelle: Energy Charts};
+        \node[rotate=90,anchor=center] at (6, 0) {\tiny Quelle: Energy Charts};
     \end{tikzpicture}
 \end{frame}
