--- a/subdocs/01_intro.tex
+++ b/subdocs/01_intro.tex
@@ -89,7 +89,7 @@
    In der Anlage zum Beschluss (S.62) finden sich dann auch Details zur Tarifgestaltung.
 
    \begin{enumerate}
-      \item Die Hochtarifstufe muss in mindestens 2 Stunden eines Tages abgerechnet werden 
+      \item Die Hochtarifstufe muss in mindestens zwei Stunden eines Tages abgerechnet werden 
          und darf die Standardtarifstufe um maximal 100\% übersteigen.
       \item Der Netzbetreiber hat eine Niedrigtarifstufe im Korridor zwischen 10 und 40\% der 
          Standardtarifstufe zu bilden.
