--- a/subdocs/02_technical.tex
+++ b/subdocs/02_technical.tex
@@ -69,4 +69,5 @@
    \frametitle{Roll-Out Quoten Q4/2024}
    \centering
    \includegraphics[width=0.95\paperwidth]{images/Roll-Out-Quoten.jpg}
+   Quelle: Bundesnetzagentur\cite{BNetzA2025RolloutQuoten}
 \end{frame}
