--- a/subdocs/03_commercial.tex
+++ b/subdocs/03_commercial.tex
@@ -222,7 +222,7 @@
     \end{tabular}
 
     \begin{block}{Flexibilität als Schlüssel mit Einschränkungen}
-        Durch Lastverschiebungen sind diese Einsprungen mit VNE gut erreichbar. Dynamische Strompreisen sind schlechter kalkulierbar und stark abhängig davon, wie gut und lange man die Last verschieben kann.
+        Durch Lastverschiebungen sind diese Einsparungen mit VNE gut erreichbar. Dynamische Strompreise sind schlechter kalkulierbar und stark abhängig davon, wie gut und lange man die Last verschieben kann.
     \end{block}
 
 \end{frame}
