Fixed Diagramme und Bibtex aufräumen

--- a/subdocs/03_commercial.tex
+++ b/subdocs/03_commercial.tex
@@ -114,7 +114,8 @@
             (11.5, 30.92 + \vhtadd) (12.5, 30.73 + \vhtadd) 
             (13.5, 30.95) (14.5, 31.16) (15.5, 33.07) (16.5, 35.97) 
             (17.5, 37.75 + \vhtadd) (18.5, 42.83 + \vhtadd) 
-            (19.5, 40.42) (20.5, 36.68) (21.5, 34.79) 
+            (19.5, 40.42 - \vntsub) (20.5, 36.68 - \vntsub) 
+            (21.5, 34.79 - \vntsub) 
             (22.5, 33.34 - \vntsub) (23.5, 32.14 - \vntsub) 
         };
         \addlegendentry{ESTW VNB + Tibber}
@@ -181,7 +182,8 @@
             (11.5, 13.2 + \vhtadd) (12.5, 12.7 + \vhtadd) 
             (13.5, 11.4) (14.5, 10.9) (15.5, 12.5) (16.5, 15) 
             (17.5, 16.6 + \vhtadd) (18.5, 16.8 + \vhtadd) 
-            (19.5, 16.6) (20.5, 17.4) (21.5, 17.7) 
+            (19.5, 16.6 - \vntsub) (20.5, 17.4 - \vntsub) 
+            (21.5, 17.7 - \vntsub) 
             (22.5, 18.8 - \vntsub) (23.5, 18.3 - \vntsub) 
         };
         \addlegendentry{ESTW VNB + Tibber}
