Link zum Github repo auf Danksagungsfolie eingebaut

--- a/subdocs/99_outro.tex
+++ b/subdocs/99_outro.tex
@@ -55,7 +55,7 @@
    \begin{textblock*}{3cm}(0.8cm,2.2cm)  % Position (x,y) in cm anpassen
       \includegraphics[width=3cm]{images/Logo_EWERH_eV_small.png}
    \end{textblock*}
-   \vspace{2.5cm}
+   \vspace{1.8cm}
    \begin{center}
       \Huge Fragen?
    \end{center}
@@ -74,6 +74,11 @@
          \href{mailto:daniel.glaser@energiewende-erlangen.de}{daniel.glaser@energiewende-erlangen.de}
       \end{flushright}
    \end{minipage}%
+
+   \begin{textblock*}{11cm}(0.8cm,8.7cm)
+      \centering 
+      \footnotesize Quelle: \url{https://github.com/the78mole/Presentation_Paragraph_14_a}
+   \end{textblock*}
 \end{frame}
 
 \usebackgroundtemplate{}
