--- a/subdocs/03_commercial.tex
+++ b/subdocs/03_commercial.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{Kosten und Nutzen I}
     \centering
-    Variabler Strompreis (2025-03-06)
+    Fixer Strompreis (ESTW 2025 ERconomy 12)
     \begin{tikzpicture}
         \begin{axis}[
             width=12cm, height=7cm, % Größe des Plots
@@ -23,34 +23,46 @@
             legend cell align=left
         ]
         
-        \addplot[thick, red, mark=*] coordinates {
-            (0.5, 29) (1.5, 29.2) (2.5, 29.4) (3.5, 29.5) 
-            (4.5, 30.3) (5.5, 30.5) (6.5, 35.6) (7.5, 37.1) 
-            (8.5, 32) (9.5, 28.4) (10.5, 25.1) (11.5, 19.5) 
-            (12.5, 19.1) (13.5, 19.1) (14.5, 20.6) (15.5, 27.5) 
-            (16.5, 32.9) (17.5, 36.8) (18.5, 38.7) (19.5, 36.8) 
-            (20.5, 34) (21.5, 31.8) (22.5, 31.1) (23.5, 29.9) 
-        };
-        \addlegendentry{Tibber}
+        % Beispiel: Balkendiagramm für stündliche Preise
+        \pgfmathsetmacro{\vnt}{0.75*1.19}
+        \pgfmathsetmacro{\vst}{7.52*1.19}
+        \pgfmathsetmacro{\vht}{14.26*1.19}
         
-        % \pgfmathsetmacro{\vntsub}{\vst-\vnt}
-        % \pgfmathsetmacro{\vhtadd}{\vht-\vst}
+        \addplot[thick, red, mark=*] coordinates {
+            (0.5, 32.4) (1.5, 32.4) (2.5, 32.4) (3.5, 32.4) 
+            (4.5, 32.4) (5.5, 32.4) (6.5, 32.4) (7.5, 32.4) 
+            (8.5, 32.4) (9.5, 32.4) (10.5, 32.4) (11.5, 32.4) 
+            (12.5, 32.4) (13.5, 32.4) (14.5, 32.4) (15.5, 32.4) 
+            (16.5, 32.4) (17.5, 32.4) (18.5, 32.4) (19.5, 32.4) 
+            (20.5, 32.4) (21.5, 32.4) (22.5, 32.4) (23.5, 32.4) 
+        };
+        \addlegendentry{ESTW ERconomy 12}
 
-        % %NT:  0.75 ->  0.8925 (netto)
-        % %ST:  7.52 ->  9.9488 (netto)
-        % %HT: 14.26 -> 16.9694 (netto)
-        % \addplot[thick, ForestGreen, mark=triangle, opacity = 0.8] coordinates {
-        %     (0.5, 31.17 - \vntsub) (1.5, 30.97- \vntsub) 
-        %     (2.5, 30.70- \vntsub) (3.5, 30.65 - \vntsub) 
-        %     (4.5, 31.18 - \vntsub) (5.5, 32.19 - \vntsub) 
-        %     (6.5, 36.26) (7.5, 38.30) (8.5, 36.72) (9.5, 33.94) (10.5, 31.27)
-        %     (11.5, 30.92 + \vhtadd) (12.5, 30.73 + \vhtadd) 
-        %     (13.5, 30.95) (14.5, 31.16) (15.5, 33.07) (16.5, 35.97) 
-        %     (17.5, 37.75 + \vhtadd) (18.5, 42.83 + \vhtadd) 
-        %     (19.5, 40.42) (20.5, 36.68) (21.5, 34.79) 
-        %     (22.5, 33.34 - \vntsub) (23.5, 32.14 - \vntsub) 
-        % };
-        % \addlegendentry{ESTW VNB + Tibber}
+        \addplot[ybar, fill=blue!30] coordinates {
+            (0.5, \vnt) (1.5, \vnt) (2.5, \vnt) (3.5, \vnt) (4.5, \vnt) 
+            (5.5, \vnt) (6.5, \vst) (7.5, \vst) (8.5, \vst) (9.5, \vst) 
+            (10.5, \vst) (11.5, \vht) (12.5, \vht) (13.5, \vst) (14.5, \vst) 
+            (15.5, \vst) (16.5, \vst) (17.5, \vht) (18.5, \vht) (19.5, \vnt) 
+            (20.5, \vnt) (21.5, \vnt) (22.5, \vnt) (23.5, \vnt) 
+        };
+        \addlegendentry{ESTW VNE}
+
+        \pgfmathsetmacro{\vntsub}{\vst-\vnt}
+        \pgfmathsetmacro{\vhtadd}{\vht-\vst}
+        \pgfmathsetmacro{\pst}{32.4}
+        \pgfmathsetmacro{\pnt}{\pst - \vntsub}
+        \pgfmathsetmacro{\pht}{\pst + \vhtadd}
+
+        \addplot[thick, ForestGreen, mark=triangle, opacity = 0.8] coordinates {
+            (0.5, \pnt) (1.5, \pnt) (2.5, \pnt) (3.5, \pnt) (4.5, \pnt) (5.5, \pnt) 
+            (6.5, \pst) (7.5, \pst) (8.5, \pst) (9.5, \pst) (10.5, \pst)
+            (11.5, \pht) (12.5, \pht) 
+            (13.5, \pst) (14.5, \pst) (15.5, \pst) (16.5, \pst) 
+            (17.5, \pht) (18.5, \pht) 
+            (19.5, \pnt) (20.5, \pnt) (21.5, \pnt) (22.5, \pnt) (23.5, \pnt) 
+        };
+        \addlegendentry{ESTW Fix + VNE}
+
         
         \end{axis}
     \end{tikzpicture}
