Link zu YT Video *Energiewirtschaft einfach* hinzugefügt
Resolves #4

--- a/subdocs/99_outro.tex
+++ b/subdocs/99_outro.tex
@@ -38,6 +38,7 @@
    \begin{block}{Weiterführende Information}
       \begin{itemize}
          \item Hager Tipp 54\cite{HagerTipp54_2024} zu §14a
+         \item Energiewirtschaft einfach \href{https://www.youtube.com/watch?v=N_o7TpAXCUA}{Youtube-Video}
          \item ESTW Allg. Bedingungen ... steuerbare Verbrauchseinrichtungen\cite{ESTW2024AllgBedstVEP14a}
          \item ESTW \href{https://netze.estw.de/de/Checkliste-fuer-Anfragen-zu-Hausanschluessen/Checkliste-fuer-Anfragen-zu-Hausanschluessen.html}{Checkliste für Anfr. zu Hausanschl.} (aktuell wenig hilfreich)
       \end{itemize}
