Link zur heise Smart-Meter FAQ hinzugefügt.

--- a/subdocs/99_outro.tex
+++ b/subdocs/99_outro.tex
@@ -41,6 +41,7 @@
          \item Energiewirtschaft einfach \href{https://www.youtube.com/watch?v=N_o7TpAXCUA}{Youtube-Video}
          \item ESTW Allg. Bedingungen ... steuerbare Verbrauchseinrichtungen\cite{ESTW2024AllgBedstVEP14a}
          \item ESTW \href{https://netze.estw.de/de/Checkliste-fuer-Anfragen-zu-Hausanschluessen/Checkliste-fuer-Anfragen-zu-Hausanschluessen.html}{Checkliste für Anfr. zu Hausanschl.} (aktuell wenig hilfreich)
+         \item \href{https://www.heise.de/ratgeber/FAQ-Smart-Meter-10354216.html}{FAQ: Smart Meter} (heise.de)
       \end{itemize}
    \end{block}
 \end{frame}
